examples/test/testpolicy12175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12175
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key21: value45
      key29: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value37
          key44: value36
      podSelector:
        matchLabels:
          key0: value7
          key22: value30
          key13: value21
